<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingVertical="12dp"
    android:paddingHorizontal="24dp"
    tools:context=".ui.details.DetailsFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent">

      <com.google.android.material.card.MaterialCardView
          android:id="@+id/card_poster"
          android:layout_width="150dp"
          android:layout_height="0dp"
          app:cardCornerRadius="8dp"
          app:layout_constraintTop_toTopOf="@id/container_information"
          app:layout_constraintBottom_toBottomOf="@id/container_information"
          app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@color/black"
            tools:ignore="ContentDescription" />

      </com.google.android.material.card.MaterialCardView>

      <LinearLayout
          android:id="@+id/container_information"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="12dp"
          android:orientation="vertical"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toEndOf="@id/card_poster"
          app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/budget"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:gravity="center_horizontal"
            tools:text="$15.000.0000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/genre"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:gravity="center_horizontal"
            tools:text="Action | Adventure | Fantasy" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/production_companies"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/production_companies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:gravity="center_horizontal"
            tools:text="Marvel Studio | Sony | Warner Bros" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/release_date"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:gravity="center_horizontal"
            tools:text="1 September 2021" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/status"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:gravity="center_horizontal"
            tools:text="Released" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/vote_average"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/vote_average"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:gravity="center_horizontal"
            tools:text="8.5" />

      </LinearLayout>

      <com.google.android.material.tabs.TabLayout
          android:id="@+id/tab_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          app:layout_constraintTop_toBottomOf="@id/container_information" />

      <androidx.viewpager2.widget.ViewPager2
          android:id="@+id/viewpager"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          app:layout_constraintTop_toBottomOf="@id/tab_layout"
          app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

      <include
          android:id="@+id/view_status"
          layout="@layout/view_status" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>